[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Unit/VampireHigh.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/units_new/vampire/unit_spy.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Damage/DamageVampireHigh.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 360.734

[node name="VampireHigh" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="DamageNPC" type="Area2D" parent="." index="0"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageNPC" index="0"]
position = Vector2( 38, 29 )
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 36.5, 37.5 )

[node name="Sprite" type="Sprite" parent="." index="2"]
scale = Vector2( 2.2, 2.2 )
texture = ExtResource( 3 )
centered = false

[node name="HP_bar" parent="." index="3"]
margin_left = 12.0
margin_top = -5.0
margin_right = 60.0
margin_bottom = -1.0
max_value = 2000.0
value = 2000.0

[node name="TimerAttack" type="Timer" parent="." index="4"]

[node name="StandingTimer" type="Timer" parent="." index="5"]

[node name="Label" type="Label" parent="." index="6"]
margin_left = 10.0
margin_top = -24.0
margin_right = 67.0
margin_bottom = -10.0
text = "VAMPIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="." index="7"]
modulate = Color( 0.145098, 0.152941, 0.721569, 1 )
margin_left = 75.0
margin_top = -24.0
margin_right = 132.0
margin_bottom = -10.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
